# LHR

./: .Rbuildignore  .Rinstignore  .gitignore  CMakeLists.txt  DESCRIPTION  LHR-UML.xmi  LHR.kdev4  NAMESPACE
R/: Environment.R  Gmean.R  LH.R  LH.ssa.R  LHR-package.r  Model.R  Model.ssa.R  Simulation.R  aaa-classes.R  betabinomial.R  betanegativebinomial.R  cohortModel.R  compoundDistributions.R  distributionOperators.R  environment.R  environmentalSeasonality.R  environmentalStochasticity.R  environmentaltemporalAutocorrelation.R  exploreCohortModel.R  exploreParameters.R  exploreSSA.R  findN0_Pest.R  model-ABM_LH_behavior.R  model-IBM-ssa_LH_behavior.R  model-deterministic.R  model-discreteABMSim.R  model-discretePopSim.R  model-numericDistri.R  model-numericDistriABMSim.R  model-ssa_LH.R  models-compoundDistributions.R  models-discreteTime.R  numericDistri.R  parameters-LH-behavior.R  populationDynamicsStats.R  probabilityDistributions.R  sampleLH.R  sampleParameters.R  seasonalEnvironment.R  slurm.R  (+1 more)
demo/: cohortModel.r
exec/: Euler-Lotka.txt
inst/: LHR-UML.xmi
man/: betaBinomial-package.Rd
src/: CMakeLists.txt  actuar.h  beta.c  betaBinom.h  betabinom.c  betanbinom.c  cohortModel-R.c  cohortModel.c  cohortModel.h  dbetabinom.c  dpq.c  dpq.h  environment.c  environment.h  init.c  locale.h  main.c  names.c  numericDistribution.c  numericDistribution.h  pbetabinom.c  probability.c  probability.h  qbetabinom.c  random.c  rbetabinom.c  test-CohortModel-R.c  test-CohortModel.c  test-ProbDistr.c
test/: 0main.r  Environment.r  LH.r  juvenileMortality.r  model-IBM-ssa-LH_behavior.r  models-compoundDistributions.r  (+1 more)
(+26 files in other folders)
